# qml-ga-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: experiment.yaml
configs/ansatz/: ansatz1_d15.yaml  ansatz1_d20.yaml  ansatz1_d6.yaml  ansatz2_d15.yaml  ansatz2_d20.yaml  ansatz2_d6.yaml  ansatz3_d15.yaml  ansatz3_d20.yaml  ansatz3_d6.yaml  ansatz4_d15.yaml  ansatz4_d20.yaml  ansatz4_d6.yaml  ansatz5_d15.yaml  ansatz5_d20.yaml  ansatz5_d6.yaml  ansatz6_d15.yaml  ansatz6_d20.yaml  ansatz6_d6.yaml
configs/datasets/: banknote.yaml  sonar.yaml  wdbc.yaml  wdbc_4feat.yaml
configs/devices/: amp_banknote.yaml  amp_sonar.yaml  amp_wdbc.yaml  zz_4q.yaml
configs/feature_maps/: amplitude.yaml  zz.yaml
configs/feature_maps/noisy_examples/: README.md  amplitude_after_g01.yaml  amplitude_after_g05.yaml  amplitude_combined_g005.yaml  zz_after_g01.yaml  zz_after_g05.yaml  zz_combined_g005.yaml
configs/hypergrids/: classical.yaml  ga.yaml
configs/optimizers/: adam_200.yaml  adam_50.yaml  ga_50.yaml  nesterov_200.yaml  nesterov_50.yaml
data/processed/: _summary.json
data/processed/banknote_authentication/: dataset_clean.csv  dataset_normalized.csv  label_map.json
data/processed/breast_cancer_wdbc/: dataset_clean.csv  dataset_normalized.csv  label_map.json
data/processed/sonar/: dataset_clean.csv  dataset_normalized.csv  label_map.json
data/splits/banknote_authentication/: fold_01_test.csv  fold_01_train.csv  (+18 more)
notebooks/: 001_preprocess_raw.ipynb
scripts/local/: emit_plan.py  run_worker.sh  start_4_workers.sh  stop_worker.sh
slurm/: setup_env.sbatch  setup_env.sh  sigle_cpu.sbatch  sweep_cpu_array_cluster.sbatch  sweep_cpu_array_cluster2.sbatch  sweep_cpu_array_cluster3.sbatch  sweep_cpu_array_cluster4.sbatch
src/: cli.py
src/ansatz/: ansatz_1.py  ansatz_2.py  ansatz_3.py  ansatz_4.py  ansatz_5.py  ansatz_6.py  base.py  init.py
src/circuits/: inspect.py  vqc.py
src/data/: datamodule.py  preprocessing.py
src/experiments/: kfold_train.py  runner.py
src/feature_maps/: amplitude_encoding.py  base.py  zz_feature_map.py
src/metrics/: classification.py  losses.py
src/optimizers/: base.py  classical.py  ga.py
src/qml_ga/: cli.py
src/utils/: io.py  plotting.py  seeds.py
tests/: conftest.py  test_ansatz.py  test_circuits.py  test_datamodule.py  test_feature_maps.py  test_io.py  test_metrics.py  test_noise.py  test_runner.py  test_smoke.py
(+68 files in other folders)
