[project]
name = "qml-ga-project"
version = "0.1.0"
description = "VQC treinado por Algoritmo Genético em PennyLane com comparação de Feature Maps"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Matheus", email = "you@example.com" }]

# Dependências principais
dependencies = [
  "pennylane>=0.39,<0.41",
  "pennylane-lightning>=0.39,<0.41",
  "pygad>=3.2,<3.3",
  "numpy>=1.26,<2.0",
  "pandas>=2.2,<2.3",
  "scikit-learn>=1.5,<1.6",
  "imbalanced-learn>=0.12,<0.13",
  "matplotlib>=3.9,<3.10",
  "scipy>=1.13,<1.14",
  "pyyaml>=6.0.2,<7.0",
]

# Entry point da CLI
[project.scripts]
qmlga = "qml_ga.cli:main"

# Mapeia o layout em src/ para empacotamento
[tool.poetry]
packages = [{ include = "qml_ga", from = "src" }]

# Grupos de dependências de desenvolvimento
[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
